--- a/AI/Offline_3(Line_of_actions)/Proj/Chess/todo
+++ b/AI/Offline_3(Line_of_actions)/Proj/Chess/todo
@@ -7,3 +7,6 @@
 6. fix heuristic (kaloder component er oitao count kora dorkar maybe)
 7. fix movements
 8. previous moves colored
+9. fix the winning condition
+10. AI nije vul chal diye here jacche -_-
+11. prev movements
